5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1712_2508.log
== SUBMITION (2019-05-14 14:57:40) 
-- CODE:
tg = int(input("Numero de termos")
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1
			
print(round ( soma, 8))
-- EXECUTION TIME:
0.124043
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 2
    cont = 0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 14:57:46) 
-- CODE:
tg = int(input("Numero de termos")
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1
			
print(round ( soma, 8))
-- ERROR:
File "XXXX", line 2
    cont = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 14:58:02) 
-- CODE:
tg = int(input("Numero de termos"))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1
			
print(round ( soma, 8))
-- EXECUTION TIME:
0.200517
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
15.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
66.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
57.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 14:58:04) 
-- CODE:
tg = int(input("Numero de termos"))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1
			
print(round ( soma, 8))
-- OUTPUT:
15.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 14:59:28) 
-- CODE:
tg = int(input("Numero de termos"))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1

print(round ( soma, 8))
-- OUTPUT:
15.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 15:00:27) 
-- CODE:
tg = int(input("Numero de termos: "))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1

print(round(soma, 8))
-- EXECUTION TIME:
0.143078
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
15.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
66.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
57.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 15:00:29) 
-- CODE:
tg = int(input("Numero de termos: "))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1

print(round(soma, 8))
-- EXECUTION TIME:
0.139913
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
15.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
15.14271284
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
66.14157215
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 15:00:30) 
-- CODE:
tg = int(input("Numero de termos: "))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1

print(round(soma, 8))
-- EXECUTION TIME:
0.159716
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
15.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
15.14271284
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
15.14271284
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 15:00:30) 
-- CODE:
tg = int(input("Numero de termos: "))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1

print(round(soma, 8))
-- EXECUTION TIME:
0.141028
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2508/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 15:00:30) 
-- CODE:
tg = int(input("Numero de termos: "))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4

while ( cont < tg):
	
	soma = soma + (3 + (sinal/(n1 * n2 * n3)))
	sinal = - sinal
	n1 = n1 + 2
	n2 = n2 + 2
	n3 = n3 + 2
	cont = cont + 1

print(round(soma, 8))
-- EXECUTION TIME:
0.177731
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2508/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:04:54) 
-- CODE:
tg = int(input("Numero de termos: "))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4
p = 3
if ( tg == 1 ):
	print (p)
else:
	while ( cont < tg):
		soma = soma + (p + (sinal/(n1 * n2 * n3)))
		sinal = - sinal
		n1 = n1 + 2
		n2 = n2 + 2
		n3 = n3 + 2
		cont = cont + 1

print(round(soma, 8))
-- OUTPUT:
15.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:15:21) 
-- CODE:
tg = int(input("Numero de termos: "))
cont = 0
soma = 0 
sinal = 4
n1 = 2
n2 = 3
n3 = 4
p = 3
if ( tg == 1 ):
	print (p)
else:
	while ( cont > tg):
		p = p + (sinal/(n1 * n2 * n3))
		sinal = - sinal
		n1 = n1 + 2
		n2 = n2 + 2
		n3 = n3 + 2
		cont = cont + 1

print(round(soma, 8))
-- OUTPUT:
15.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
